# bevy_jam_5

./: Cargo.toml  Readme.md  bevy_jam_5-486d2c00025322a6.js  index.html
.github/workflows/: release.yaml
resources/: map.aseprite
src/: lib.rs  loading.rs  main.rs  map.rs  menu.rs  physics.rs  player.rs  tank.rs  ui.rs
