[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.1"
bevy = { version = "0.14.0" }
bevy-tnua = "0.19.0"
bevy-tnua-avian2d = "0.1.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
rand = "0.8.5"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/file_watcher"
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1"
